@@ -35,6 +35,8 @@ Version 2.0-dev (CVS)
   passed in feature instead of through the return value of the method as
   was the case with the old SetFeature() method in MITAB 1.x.
 
+- Added support for extended text attributes - new function for text style and symbol style (bug 2232)
+
 - Fixed TABCleanFieldName() function should allow char '#' in field name (bug 2231)
 
 - Added Krovak projection suppoprt (bug 2230)
@@ -978,5 +980,5 @@ Version 0.1 - (1999-12-04)
 
 
 ------------
-$Id: HISTORY.TXT,v 1.242 2010-07-05 17:41:07 aboudreault Exp $
+$Id: HISTORY.TXT,v 1.243 2010-07-05 18:13:12 aboudreault Exp $
 ------------
